app/assets/stylesheets/weeet.scss
// Place all the styles related to the Weeet controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

$gray-dark: #888;
$gray-light: #ccc;
$off-white: #eee;
$black: #333;

$post-bg: #5cb85c;
$post-bg-hover: #8AD38A;
$post-bg-clicked: #369836;
$vote-underlay: rgba(68, 143, 48, 0.1);
$vote-remainder: rgba(68, 143, 48, 0.25);

$vote-up: #5CB85C;
$vote-down: #BE4343;

body {
  font-family: 'Exo'
}

.form-control.weet {
  margin-bottom: 4px;
}
.start-hidden {
  display: none;
}

.navbar-header {
  float: left !important;
}

.nav.navbar-nav {
  float: right !important;
  margin-top: 0px;
  margin-bottom: 0px;

  li {
    float: left;
  }
}

.pushdown {
  height: 52px;
  width: 100%;
}

.weet-container {
  width: 100vw;
  max-width: 640px;
  margin-left: auto;
  margin-right: auto;
  border: 1px solid $gray-light;
  border-radius: 4px;
  margin-top: 16px;
  margin-bottom: 16px;


  .weet-header {
    background-color: $off-white;
    border-bottom: 1px solid $gray-light;
    padding: 8px 8px 6px 8px;

    .weet-author {
      font-weight: bold;
      font-size: 16px;
    }

    .weet-date {
      text-align: right;
      color: $gray-dark;
    }

    .blockchain-persisted {
      padding-left: 8px;
    }
  }

  .weet-body {
    padding: 8px;

    .weet-field {
      width: 100%;
    }
  }

  .weet-footer {
    background-color: $off-white;
    border-top: 1px solid $gray-light;
    height: 36px;


    .vote {
      height: 35px;
      padding: 8px;
      text-align: center;
      border-right: 1px solid $gray-light;
      border-left: 1px solid $gray-light;
      margin-left: -1px;
      user-select: none;
      -webkit-user-select: none;
      -moz-user-select: none;
      -ms-user-select: none;
    }

    .voteup.persisted {
      background-color: $vote-up;
      color: white;
    }

    .votedown.persisted {
      background-color: $vote-down;
      color: white;
    }

    .vote:first-child {
      border-bottom-left-radius: 4px;
    }

    .vote.faded {
      opacity: 0.5;
    }

    .vote.enabled {
      cursor: pointer;
      &:hover {
        background-color: white;
      }
    }


    .vote.disabled {
      color: $gray-light;
    }

    .timer-container {
      text-align: center;
      height: 36px;
      line-height: 36px;
      padding-left: 0px;
      padding-right: 0px;
      background-color: $vote-underlay;
      right: -2px;
      border-bottom-right-radius: 4px;

      .timer-bar {
        background-color: $vote-remainder;
        height: 36px;
        margin-top: 0px;
        position: absolute;
        width: 100%;
        z-index: 10;
      }

      .timer-text {
        position: relative;
        margin-top: 8px;
        z-index: 11;
        color: $black;
        user-select: none;
        -webkit-user-select: none;
        -moz-user-select: none;
        -ms-user-select: none;
      }
    }

    .slider {
      padding: 0;
    }

    .post-weet {
      height: 36px;
      line-height: 36px;
      cursor: pointer;
      background-color: $post-bg;
      text-align: center;
      color: white;
      right: -2px;
      border-bottom-right-radius: 4px;

      &:hover {
        background-color: $post-bg-hover;
      }

      &:active {
        background-color: $post-bg-clicked;
      }
    }

    .post-weet.disabled {
      background-color: $gray-light;
    }

    .char-remaining {
      color: $gray-light;
      padding-left: 8px;
      padding-top: 8px;
    }

    .approve-status {
      padding: 8px;
      color: white;
      text-align: center;
      border-bottom-right-radius: 4px;
      user-select: none;
      -webkit-user-select: none;
      -moz-user-select: none;
      -ms-user-select: none;
    }

    .approve-status.weet-approved {
      background-color: green;
    }

    .approve-status.weet-rejected {
      background-color: red;
    }
  }
}

.border {
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  height: 128px;
}

.sign-in-form {
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  max-width: 224px;
}

@media screen and (max-width: 991px) {
  .weet-container {
    width: 90vw;
  }
}

@media screen and (max-width: 767px) {
  .nav.navbar-nav {
    margin-top: 5px;
    li {
      a {
        //padding-top: 15px;
        padding-bottom: 15px;
      }
    }
  }
  .weet-container {
    .weet-header {
      .weet-date {
        text-align: left;
      }
    }

    .weet-footer {
      .vote {
        font-size: 11px;
        padding: 11px 0px 10px 0px;
      }

      .approve-status {
        font-size: 11px;
        padding: 11px 4px 10px 4px;
      }

      .timer-container {
        .timer-text {
          font-size: 11px;
          padding: 11px 4px 10px 4px;
        }
      }
    }
  }
}

